--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+  <main>
+     <!-- Header -->
    <header class="header">
   <div class="header-container">
     <div class="logo-and-name">
@@ -23,6 +25,7 @@
   </div>
 </header>
 
+<!-- hero section -->
 <section class="hero-section">
   <div class="hero-content">
     <h1 class="hero-title">
@@ -35,6 +38,153 @@
     <a href="#apply" class="hero-button">Apply Today</a>
   </div>
 </section>
+<br>
 
+<!-- Text Animation Section -->
+
+<section class="card">
+  <div class="card0">
+    <marquee>
+    <h1 class="h1">Come To UAE</h1>
+    <h1 class="h2">Come To UAE</h1>
+    <h1 class="h3">Come To UAE</h1>
+    <h1 class="h4">Come To UAE</h1>
+     </marquee>
+
+  <div class="container">
+    <h1 class="h5">Come To UAE</h1>
+    <h1 class="h6">Come To UAE</h1>
+    <h1 class="h7">Come To UAE</h1>
+    <h1 class="h8">Come To UAE</h1>
+  </div>
+
+  <div class="container">
+    <marquee>
+    <h1 class="h5">Come To UAE</h1>
+    <h1 class="h6">Come To UAE</h1>
+    <h1 class="h7">Come To UAE</h1>
+    <h1 class="h8">Come To UAE</h1>
+    </marquee>
+  </div>
+
+  <div class="container">
+    <h1 class="h5">Come To UAE</h1>
+    <h1 class="h6">Come To UAE</h1>
+    <h1 class="h7">Come To UAE</h1>
+    <h1 class="h8">Come To UAE</h1>
+  </div>
+
+  <div class="container">
+    <marquee>
+    <h1 class="h5">Come To UAE</h1>
+    <h1 class="h6">Come To UAE</h1>
+    <h1 class="h7">Come To UAE</h1>
+    <h1 class="h8">Come To UAE</h1>
+    </marquee>
+  </div>
+  
+  <div class="Animated"><img src="img/vecteezy_ai-generated-3d-flying-rocket-png-isolated-on-transparent_35982442.png" alt=""></div>
+ 
+  </div>
+</section>
+    <br>
+
+    <!-- cards -->
+
+      <h1 class="haha"><b>We bulit harbour because 
+        <br>
+        we,ve been in your shoes!</b></h1>
+  <p>The process to set things up can feel opaque and confusing, that's
+     <br>
+     why we cut out the middlemen and went straight to the source</p>
+  <section class="section1">
+  <div class="card1">
+    <div class="card-header">
+    <h2 id="H1"> THREE WEEKS<h2 id="H2"> THREE WEEKS<h2 id="H4"> THREE WEEKS</h2></h2></h2>
+    </div>
+     <img src="img/image (2).png" alt="" id="one">
+    <h2 id="big">Fast setup, from <h2 id="hh1">anywhere.</h2></h2>
+    <pre id="parah"><h6>Get tour entity in 3 weeks . kick up your 
+heels and let us do the grunt work</h6></pre>
+    </div>
+  <div class="card2"><img src="img/glass (1).png" alt="" id="two">
+  <h2 id="small">Dedicated Support</h2>
+  <pre><h6 id="vBig"> Since we work directly with freezones we can
+      accurately answer all of your questions</h6></pre>
+  </div>
+   </section>
+    <section class="section2">
+      <div class="card3"><img src="img/image (3).png" alt="" id="three">
+      <pre><h2 id="Sml">Get a bank account
+        right after </h2></pre>
+      <pre><h6 id="hh2">Makes transfers, deposits and issues cards</h6></pre>
+    </div>
+       <div class="card4"><img src="img/image (4).png" alt="" id="for">
+        <pre id="hh4"><h2>  Vetted vendors for the
+  other things you'll need!</h2></pre>
+<pre id="hh7"> <h6>From health insurance to recommendations for 
+place, car rental or tax advice . we got you!</h6></pre>
+      </div>
+      </section>
+    </div>
+ <br>
+
+ <!-- cars secion 2 -->
+<h1 class="hehe">Our goal is to help 5,000 talented founders,
+  <br> builders, and operators to setup their base 
+  <br>in the UAE by 2025.</h1>
+<section class="bg">
+  <div class="crds">
+   <div class="crd1">
+   <img src="https://cdn.prod.website-files.com/64d2ac3dbb359ecfd381fa95/64e26a594ecfa09e96e3afd6_52.png" alt="">
+   <h2 style="font-size: 30px; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; margin-left: 13px; margin-top: 35px;">Remote Workers</h2>
+   <div class="smart">
+    <span>
+     Thrive from the tax benefits, sun all year round, beaches
+    </span>
+   </div>
+   </div>
+   <div class="crd2">
+   <img src="https://cdn.prod.website-files.com/64d2ac3dbb359ecfd381fa95/64e26a5a4151507013d37427_18.png" alt="">
+   <h2 style="font-size: 30px; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; margin-left: 13px; ">Enterprises & Startups</h2>
+     <div class="smart1">
+    <span>
+    Win on tax benefits, grow faster with our fully compliant setups
+    </span>
+   </div>
+   </div>
+   <div class="crd3">
+    <img src="https://cdn.prod.website-files.com/64d2ac3dbb359ecfd381fa95/64e26a59b4f5ea9cdd891f1f_22.png" alt="">
+       <h2 style="font-size: 30px; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; margin-left: 13px; ">Individuals & Businesses</h2>
+           <div class="smart1">
+    <span>
+We have an enterprise-grade stack and experts to help you set up
+    </span>
+   </div>
+   </div>
+  </div>
+</section>
+<br>
+
+<!-- text -->
+
+<h1 class="smart2">How does this work?</h1>
+<p class="p1"> to our direct partnerships with leading freezones in the 
+  <br>region, we've made the process super simple!</p>
+  <div class="bn">
+   <a href="#">Apply Today</a>
+  </div>
+  <br>
+
+  <!-- card Section 01 -->
+
+   <section class="smrt">
+    <div class="smt">
+      <div class="cd">
+     <img src="https://cdn.prod.website-files.com/64d2ac3dbb359ecfd381fa95/64e27a01b115eac5516f1cbf_image.png" alt="">
+    </div>
+  </div>
+   </section>
+</main>
 </body>
 </html>
