--- a/index.html
+++ b/index.html
@@ -52,10 +52,12 @@
      </marquee>
 
   <div class="container">
+    <marquee>
     <h1 class="h5">Come To UAE</h1>
     <h1 class="h6">Come To UAE</h1>
     <h1 class="h7">Come To UAE</h1>
     <h1 class="h8">Come To UAE</h1>
+    </marquee>
   </div>
 
   <div class="container">
@@ -68,10 +70,12 @@
   </div>
 
   <div class="container">
+    <marquee>
     <h1 class="h5">Come To UAE</h1>
     <h1 class="h6">Come To UAE</h1>
     <h1 class="h7">Come To UAE</h1>
     <h1 class="h8">Come To UAE</h1>
+    </marquee>
   </div>
 
   <div class="container">
@@ -181,10 +185,114 @@ We have an enterprise-grade stack and experts to help you set up
    <section class="smrt">
     <div class="smt">
       <div class="cd">
+        <h1 class="ol">01</h1>
      <img src="https://cdn.prod.website-files.com/64d2ac3dbb359ecfd381fa95/64e27a01b115eac5516f1cbf_image.png" alt="">
+     <h1 style="margin-left: -670px; margin-top: -100px; font-size: 30px; font-family: Verdana, Geneva, Tahoma, sans-serif;">Quick consultation call</h1>
+     <div class="spns">
+      <span class="spn">Schedule a 1:1 call with our team to talk through your ideal <br>corporate and personal setup. You can skip this step if 
+        <br>you’d like to!</span>
+     </div>
     </div>
   </div>
    </section>
+   <br>
+
+   <!-- Card Section 02  -->
+
+      <section class="smrtss">
+    <div class="smt">
+      <div class="cd2">
+        <h1 class="ol2">02</h1>
+     <img src="https://cdn.prod.website-files.com/64d2ac3dbb359ecfd381fa95/64e26b90b99fd0a3bc765062_51.png" alt="">
+     <h1 style="margin-left: -670px; margin-top: -100px; font-size: 30px; font-family: Verdana, Geneva, Tahoma, sans-serif;">Submit 4 documents</h1>
+     <div class="spns">
+      <span class="spn">Once you’ve paid the registration fees, and submitted 
+        <br>these documents we convert them to ideal format for 
+        <br>the freezone and petition for a license.</span>
+     </div>
+    </div>
+  </div>
+   </section>
+   <br>
+
+    <!-- Card Section 03  -->
+
+     <section class="smrt">
+    <div class="smt">
+      <div class="cd">
+        <h1 class="ol">03</h1>
+     <img src="https://cdn.prod.website-files.com/64d2ac3dbb359ecfd381fa95/64e26b901cac081b69974a0b_33.png" alt="">
+     <h1 style="margin-left: -670px; margin-top: -100px; font-size: 30px; font-family: Verdana, Geneva, Tahoma, sans-serif;">Get your business license!</h1>
+     <div class="spns">
+      <span class="spn">In 3 weeks after submitting your documents, we’ll email
+        <br> you your business license. You can now issue a visa for 
+        <br>yourself or setup a bank account.</span>
+     </div>
+    </div>
+  </div>
+   </section>
+   <br>
+
+   <!-- h1 -->
+    <h1 style="font-size: 50px; text-align: center; margin-top: 100px;font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">Loved by founders all over 
+      <br>the world.</h1>
+      <br>
+
+      <!-- Comments -->
+     
+      <section class="css">
+        <div class="Comments">
+          <div class="comment">
+          <h2>Harbour helped me iterate on the product I am 
+            <br>building.</h2>
+           <img src="https://cdn.prod.website-files.com/64d2ac3dbb359ecfd381fa95/653ac141e744f468b48766ed_CuwJdFL7CKroFQjq6XGFGIZYSp6uegLtuUno03m2rgs.jpeg" alt="">
+           <h1>Shweta Johri</h1>
+          </div>
+            <div class="coment">
+          <h2 class="cmt2">The harbour platform and cummunity helped me <br>
+            find my early customers for a product I was building
+            <br>as I moved to Dubai from the UK.</h2>
+           <img src="https://cdn.prod.website-files.com/64d2ac3dbb359ecfd381fa95/653ac1f84256df7ddec482c4_8haT5ffz-aLVjzT22-iPvskPdO3anyKR8OH-rLq_UNQ.jpeg" loading="lazy" sizes="40px" srcset="https://cdn.prod.website-files.com/64d2ac3dbb359ecfd381fa95/653ac1f84256df7ddec482c4_8haT5ffz-aLVjzT22-iPvskPdO3anyKR8OH-rLq_UNQ-p-500.jpeg 500w, https://cdn.prod.website-files.com/64d2ac3dbb359ecfd381fa95/653ac1f84256df7ddec482c4_8haT5ffz-aLVjzT22-iPvskPdO3anyKR8OH-rLq_UNQ-p-800.jpeg 800w, https://cdn.prod.website-files.com/64d2ac3dbb359ecfd381fa95/653ac1f84256df7ddec482c4_8haT5ffz-aLVjzT22-iPvskPdO3anyKR8OH-rLq_UNQ-p-1080.jpeg 1080w, https://cdn.prod.website-files.com/64d2ac3dbb359ecfd381fa95/653ac1f84256df7ddec482c4_8haT5ffz-aLVjzT22-iPvskPdO3anyKR8OH-rLq_UNQ-p-1600.jpeg 1600w, https://cdn.prod.website-files.com/64d2ac3dbb359ecfd381fa95/653ac1f84256df7ddec482c4_8haT5ffz-aLVjzT22-iPvskPdO3anyKR8OH-rLq_UNQ-p-2000.jpeg 2000w, https://cdn.prod.website-files.com/64d2ac3dbb359ecfd381fa95/653ac1f84256df7ddec482c4_8haT5ffz-aLVjzT22-iPvskPdO3anyKR8OH-rLq_UNQ.jpeg 2250w" alt="" class="testimonial26_customer-image"> 
+           <h1>Lalita Chopra</h1>
+          </div>
+            <div class="coent">
+          <h2>The Harbour team is always willing to go the extra mile! I recently relocated to Dubai and was clueless and overwhelmed about the process; from visas all the way down to my mobile device. Really appreciated the team’s patience in guiding me through all of it. Anything I need now I simply go straight to Harbour. The global nature of the community really helps me as a person from the Caribbean find my crew. <br></h2>
+           <img src="https://cdn.prod.website-files.com/64d2ac3dbb359ecfd381fa95/653ac24cf50b9fd54f17eb4b_m_1mkpHilIRUl6Gfo4UR0-B2vpA8K7h4s-gtVo6FlDU.png" alt="">
+           <h1>Kimberly Adams</h1>
+          </div>
+           <div class="cont">
+          <h2>I love the community. Helps me every single day to get feedback on products and all things UAE.</h2>
+           <img src="https://cdn.prod.website-files.com/64d2ac3dbb359ecfd381fa95/653ac17a96b0ea0a36d4d3ba_KGYCXftpkCxC6jGElI4PLuK5Gco5p0ERi91dePcigSM.jpeg" alt="">
+           <h1>Sharvil Malik</h1>
+          </div>
+             <div class="cot">
+          <h2>Harbour helped me find a highly curated set of folks that I want to spend time around for work and outside of wor.</h2>
+           <img src="https://cdn.prod.website-files.com/64d2ac3dbb359ecfd381fa95/653ac1e490a561bfbf9a74d4_Jx31YGv5hs6iVTA363auVUn8mZYVR1dt-3sfQSJpxZU.jpeg" alt="">
+           <h1>Mohammed Ridwan</h1>
+          </div>
+             <div class="ct">
+          <h2>I moved from Luxembourg to Dubai and harbour helped me find a community of tech folks that I align with and want to be around.</h2>
+           <img src="https://cdn.prod.website-files.com/64d2ac3dbb359ecfd381fa95/653ac261672a633f3c61d1ab_AgCBlAmcNXJpCZhDq6uOOiIE7hrq_Zsq-lq11UCI85Y.jpeg" alt="">
+           <h1>Alex Scott</h1>
+          </div>
+             <div class="t">
+          <h2>I love this platform and community. It made my move so much easier. Strongly recommend.</h2>
+           <img src="https://cdn.prod.website-files.com/64d2ac3dbb359ecfd381fa95/653ac236d44d8a0064a9bc7a_204h4lHIzfZzR1hW5sf2E6Fe0BgrXpHaZBiSjjEEfMA.jpeg" alt="">
+           <h1>Gabriel García Leyva</h1>
+          </div>
+            <div class="c">
+          <h2>The community platform that harbour offers is one of the best in class. I found my people and am in the job I am in as a VC right now through the network.</h2>
+           <img src="https://cdn.prod.website-files.com/64d2ac3dbb359ecfd381fa95/653ac20cacf4caf2c9d758d9_3zgDcx2svVoWSLkfqnR7gXTngFwOKi6hGKwvRw83W0w.jpeg" alt="">
+           <h1>Anne-Maria Salmela</h1>
+          </div>
+           <div class="o">
+          <h2>Having grown up in the UAE, it's been refreshing to meet fellow tech founders and operators in the region through Harbour.</h2>
+           <img src="https://cdn.prod.website-files.com/64d2ac3dbb359ecfd381fa95/653ac0d15e617607f6e7f448_sD_cvZer43109zXoWKau-6UtRyFDXNyac2oUYKS8Wq4.jpeg" alt="">
+           <h1>Usman Saleem</h1>
+          </div>
+        </div>
+      </section>
+      <br>
 </main>
 </body>
 </html>
