--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+  
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Harbour</title>
+    <title>HARBOUR</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -21,7 +22,7 @@
       <a href="#process" class="nav-item">process</a>
       <a href="#testimonials" class="nav-item">testimonials</a>
     </nav>
-    <a href="#apply" class="apply-button">Apply Today</a>
+    <a href="https://chromewebstore.google.com/" class="apply-button">Apply Today</a>
   </div>
 </header>
 
@@ -35,7 +36,7 @@
       We help you setup entities at cost with vetted <br />freezones. No margins.
       No BS. No random costs.
     </p>
-    <a href="#apply" class="hero-button">Apply Today</a>
+    <a href="https://moviebox.ph/" class="hero-button">Apply Today</a>
   </div>
 </section>
 <br>
@@ -158,7 +159,7 @@ We have an enterprise-grade stack and experts to help you set up
 <p class="p1"> to our direct partnerships with leading freezones in the 
   <br>region, we've made the process super simple!</p>
   <div class="bn">
-   <a href="#">Apply Today</a>
+   <a href="https://audionic.co/?srsltid=AfmBOorHP4Rq3jAHhqM7ooN7RqoDy8XcH1G5KyDBRmXimMk38AnJ_RZs">Apply Today</a>
   </div>
   <br>
 
@@ -276,5 +277,39 @@ We have an enterprise-grade stack and experts to help you set up
       </section>
       <br>
 </main>
-</body>
-</html>
+
+<!-- footer -->
+
+  <footer>
+  <div class="foter">
+   <h1>🌴 Harbour</h1>
+   <h2>We're here to guide you on every step <br> of your journey to set up a base in the <br> UAE.</h2>
+    <nav class="nav-link">
+      <a href="#mission" class="nav-items">mission</a>
+      <a href="#benefits" class="nav-items">benefits</a>
+      <a href="#process" class="nav-items">process</a>
+      <a href="#testimonials" class="nav-items">testimonials</a>
+    </nav>
+    <hr>
+    <h3>Harbour, Copyright 2023 All Rights Reserved</h3>
+  </div>
+      <section >
+  <!-- <div class="balls">
+  <div class="ball">
+  </div>
+   <div class="green">
+  </div>
+    <div class="red">
+  </div>
+  <div class="pink">
+  </div> -->
+  <!-- <div class="bal">
+  </div>
+  <div class="ba">
+  </div> -->
+    </div>
+</section>
+</footer>
+
+
+
