--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HARBOUR</title>
+    <link rel="shortcut icon" href="img/icons8-palm-tree-16.png">
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -281,7 +282,7 @@ We have an enterprise-grade stack and experts to help you set up
 <!-- footer -->
 
   <footer>
-  <div class="foter">
+  <div>
    <h1>🌴 Harbour</h1>
    <h2>We're here to guide you on every step <br> of your journey to set up a base in the <br> UAE.</h2>
     <nav class="nav-link">
@@ -294,7 +295,7 @@ We have an enterprise-grade stack and experts to help you set up
     <h3>Harbour, Copyright 2023 All Rights Reserved</h3>
   </div>
       <section >
-  <!-- <div class="balls">
+  <div class="balls">
   <div class="ball">
   </div>
    <div class="green">
@@ -302,11 +303,16 @@ We have an enterprise-grade stack and experts to help you set up
     <div class="red">
   </div>
   <div class="pink">
-  </div> -->
-  <!-- <div class="bal">
+  </div>
+    <div class="bal">
   </div>
   <div class="ba">
-  </div> -->
+  </div>
+   <h1 class="hbr">🌴 Harbour</h1>
+   <h2 class="rob">Get started now</h1>
+    <p class="p9">We're here to guide you on every step of
+      <br> your journey to set up a base in the UAE.</p>
+      <a href="https://www.daraz.pk/#?" class="tomorrow">Apply Today</a>
     </div>
 </section>
 </footer>
